[gd_scene load_steps=4 format=3 uid="uid://duddtd61qo7x"]

[ext_resource type="Theme" uid="uid://cmtub874cpkew" path="res://scenes/menu_UI/main_menu_theme.tres" id="1_n7le5"]
[ext_resource type="Script" path="res://scenes/menu_UI/game_menu.gd" id="1_s7q0w"]
[ext_resource type="PackedScene" uid="uid://boa4w0vx84ybe" path="res://scenes/menu_UI/setting_menu/settings_menu.tscn" id="2_5vv5r"]

[node name="GameMenu" type="CanvasLayer"]
script = ExtResource("1_s7q0w")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_n7le5")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.393086, 0.393086, 0.393085, 1)

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenu" type="PanelContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MainMenu"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Control/MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Corrupt Cop Cleaning Cabinet"

[node name="spacer" type="Control" parent="Control/MainMenu/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="Control/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[node name="Settings" type="Button" parent="Control/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="Control/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Credits" type="Button" parent="Control/MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Credits"

[node name="SettingsMenu" parent="Control" instance=ExtResource("2_5vv5r")]
layout_mode = 1
